[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/jogador.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/images/jogador2.png" type="Texture" id=3]
[ext_resource path="res://scenes/gun.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37.0933, 19.8149 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "playerHit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("col/box/spr:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("col/box/spr:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.560784, 0.560784, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 2 )

[node name="gun" parent="." instance=ExtResource( 4 )]
script = null

[node name="box" type="CollisionShape2D" parent="."]
position = Vector2( 13.2433, 8.74057 )
shape = SubResource( 1 )

[node name="col" type="Area2D" parent="."]

[node name="box" type="CollisionShape2D" parent="col"]
position = Vector2( 13.2433, 8.74057 )
shape = SubResource( 1 )

[node name="spr" type="AnimatedSprite" parent="col/box"]
position = Vector2( -13.2433, -8.74057 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="Reload" type="Timer" parent="."]
wait_time = 0.5

[node name="damageCooldown" type="Timer" parent="."]
wait_time = 0.1

[node name="playerEffects" type="AnimationPlayer" parent="."]
anims/playerHit = SubResource( 3 )

[connection signal="area_entered" from="col" to="." method="_on_col_area_entered"]
[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]
[connection signal="timeout" from="damageCooldown" to="." method="_on_damageCooldown_timeout"]
